vlib/v/checker/tests/array_of_refs_insert_non_ref.vv
struct Dummy {
	v int
}

@[heap]
struct Container {
mut:
	vals []&Dummy
}

fn main() {
	mut c := &Container{}
	d := Dummy{
		v: 1
	}
	c.vals << d
	c.vals.insert(0, d)
}
